update description and icons

--- a/0002.2-agile-retro/description
+++ b/0002.2-agile-retro/description
@@ -1,3 +1,6 @@
 Icons used from:
+<a href="https://www.flaticon.com/free-icons/planning" title="planning icons">Planning icons created by Freepik - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/computer" title="computer icons">Computer icons created by Freepik - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/deployment" title="deployment icons">Deployment icons created by vectorsmarket15 - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/iteration" title="iteration icons">Iteration icons created by kornkun - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/reading" title="reading icons">Reading icons created by mangsaabguru - Flaticon</a>
